# twitter-bot-openai

./: .env.example  .gitignore  README.md  app.py  create_tweets.py  main.py  pyproject.toml  requirements.txt  tracery.example.json  tracery.json
src/: open_ai_requestor.py  tracery_tweet_message_generator.py  twitter_bot.py
